--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ fastapi==0.115.12
 uvicorn==0.34.3
 python-dotenv==1.1.0
 pydantic==2.11.5
-pydantic-settings==2.2.1 
+pydantic-settings==2.2.1
+openai==1.86.0 
